fixed menu clipping

--- a/src/components/NavBar/index.scss
+++ b/src/components/NavBar/index.scss
@@ -172,7 +172,7 @@
         flex-direction: column;
         align-items: flex-end;
         gap: 1em;
-        margin-top: 1em;
+        margin-top: 1.5em;
         transition: margin-top 300ms ease;
 
         &.hidden {
